# pyroptlib

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
Manifolds/: Element.h
ROPTLIB/: CMakeLists.txt  README.md
ROPTLIB/Others/: def.h
bindings/: CMakeLists.txt  bindings.cpp  cpptest.cpp
python/: CMakeLists.txt  bindings.cpp
python/manifolds/: element.cpp  manifold.cpp
src/Others/: def.h
